# python-project-template

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: .pre-commit-config.yaml  requirements.txt
.github/workflows/: actions.yml  code-quality.yml  release.yml  upgrade-security-checks.yml
docs/: workflow.md
requirements/: dev-requirements.txt
