[tool.poetry]
name = "py-project-template"
version = "0.1.0.dev1"
description = "A project template to use for new Python Github repositories with best practices."
authors = ["Azat <8280770+azataiot@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
isort = "^5.12.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
