[tool.poetry]
name = "py-project-template"
version = "0.1.0.dev3"
description = "A project template to use for new Python Github repositories with best practices."
authors = ["Azat <8280770+azataiot@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
isort = "^5.12.0"
pytest = "^7.4.2"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.bandit]
exclude_dirs = ["tests", "path/to/file"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]
